--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,11 +7,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        racket-version: ["current"]
-        racket-variant: ["regular", "CS"]
+        racket-version: ["stable", "current"]
+        racket-variant: ["BC", "CS"]
     steps:
       - uses: actions/checkout@master
-      - uses: Bogdanp/setup-racket@v0.10
+      - uses: Bogdanp/setup-racket@v0.12
         with:
           architecture: x64
           distribution: full
